Fixed ui issue where home buttons would not overlay the parallax image despite having a higher z-index value

--- a/FrontEnd/registerFrontEnd/src/Pages/Home/Home.css
+++ b/FrontEnd/registerFrontEnd/src/Pages/Home/Home.css
@@ -68,6 +68,7 @@ body {
   position: relative;
   overflow: hidden;
   height: 60vh;
+  margin-top: 20%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -79,6 +80,7 @@ body {
   object-fit: cover;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 /* Gallery Grid Styling */
@@ -136,15 +138,17 @@ body {
 /* Buttons */
 .hero-btn, .about-btn, .upcoming-event-btn, .contact-btn {
   padding: 15px 10px;
+  position: relative;
   background-color: var(--btn-bg);
   color: var(--inverted-button-text);
   text-decoration: none;
   max-width: 200px;
+  z-index: 3;
   font-size: clamp(1rem, 4vw, 2rem);
   border-radius: 5px;
   transition: background-color 0.3s;
   margin-top: 0px;
-  z-index: 100;
+  
 }
 
 .hero-btn:hover, .about-btn:hover, .upcoming-event-btn:hover, .contact-btn:hover {
